tests/vertical-slice/accept/user_record_bitcopy.hew
type Point {
    x: i64,
    y: i64,
}

fn main() -> i64 {
    let p = Point { x: 20, y: 22 };
    p.x + p.y
}
